--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <form id="surveyForm">
-        <img src="C:\Encuesta\imagen.jpg" alt="Imagen descriptiva" class="header-image">
+        <img src="https://github.com/JhoelRoncal/estadistica/blob/main/imagen.jpg?raw=true" alt="Imagen descriptiva" class="header-image">
         <h1>Encuesta sobre Fraudes Piramidales</h1>
 
         <div class="question" id="question1">
