--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <form id="surveyForm" action="https://formsubmit.co/jhoelroncal@hotmail.com" method="POST">
-        <input type="hidden" name="_next" value="https://formsubmit.co/el/zuhiro"> <!-- Redirigir a esta URL después del envío -->
+        <input type="hidden" name="_next" value="https://jhoelroncal.github.io/estadistica/"> <!-- Redirigir a esta URL después del envío -->
         <input type="hidden" name="_captcha" value="false"> <!-- Desactivar captcha si necesario -->
         <input type="hidden" name="email" value="jhoelroncal@hotmail.com"> <!-- Correo electrónico oculto para recibir respuestas -->
 
