--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         <div class="question" id="question1">
             <label>¿Ha sido contactado alguna vez por una organización o individuo ofreciéndole una oportunidad de inversión que parece ser demasiado buena para ser verdad?</label>
             <select name="pregunta1">
-                <option value="yes">Sí</option>
-                <option value="no">No</option>
+                <option value="SI">Sí</option>
+                <option value="NO">No</option>
             </select>
             <button type="button" onclick="showNextQuestion(1)">Siguiente</button>
         </div>
@@ -27,8 +27,8 @@
         <div class="question hidden" id="question2">
             <label>¿Conoce los signos de advertencia de una estafa piramidal?</label>
             <select name="pregunta2">
-                <option value="yes">Sí</option>
-                <option value="no">No</option>
+                <option value="SI">Sí</option>
+                <option value="NO">No</option>
             </select>
             <button type="button" onclick="showNextQuestion(2)">Siguiente</button>
         </div>
@@ -36,8 +36,8 @@
         <div class="question hidden" id="question3">
             <label>¿Ha invertido dinero en un programa que le prometió altos retornos en un corto período de tiempo?</label>
             <select name="pregunta3">
-                <option value="yes">Sí</option>
-                <option value="no">No</option>
+                <option value="SI">Sí</option>
+                <option value="NO">No</option>
             </select>
             <button type="button" onclick="showNextQuestion(3)">Siguiente</button>
         </div>
@@ -45,8 +45,8 @@
         <div class="question hidden" id="question4">
             <label>¿Le han pedido reclutar a más personas para aumentar su potencial de ganancia en alguna inversión?</label>
             <select name="pregunta4">
-                <option value="yes">Sí</option>
-                <option value="no">No</option>
+                <option value="SI">Sí</option>
+                <option value="NO">No</option>
             </select>
             <button type="button" onclick="showNextQuestion(4)">Siguiente</button>
         </div>
@@ -54,10 +54,10 @@
         <div class="question hidden" id="question5">
             <label>¿Cómo evaluaría su nivel de conocimiento sobre las inversiones legítimas en comparación con las estafas piramidales?</label>
             <select name="pregunta5">
-                <option value="alto">Alto</option>
-                <option value="moderado">Moderado</option>
-                <option value="bajo">Bajo</option>
-                <option value="nulo">Nulo</option>
+                <option value="Alto">Alto</option>
+                <option value="Moderado">Moderado</option>
+                <option value="Bajo">Bajo</option>
+                <option value="Ninguno">Nulo</option>
             </select>
             <button type="button" onclick="showNextQuestion(5)">Siguiente</button>
         </div>
